--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-	"name": "naze",
+	"name": "lumine",
 	"description": "WhatsApp Bot Using Lib Baileys",
 	"repository": "https://github.com/nazedev/naze",
 	"logo": "https://node-js-sample.herokuapp.com/node.png",
